--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,71 @@
-<p>home works!</p>
+<div class="flex flex-row h-full">
+    <div class="basis-1/4 pt-4 px-4">
+        <div class="h-90">
+            <h2 class="secondary-color">Recommended Products</h2>
+            <ul class="list-disc list-inside">
+                <li class="pl-5"><a href="#" class="underline hover:underline">Benebone Bacon Flavor</a></li>
+                <li class="pl-5"><a href="#" class="underline hover:underline">Nylabone Power Chew Lobster</a></li>
+                <li class="pl-5"><a href="#" class="underline hover:underline">Goody Box Adventure Toys & Treats</a></li>
+                <li class="pl-5"><a href="#" class="underline hover:underline">Frisco 20-in Faux Fur Cat Tree, Gray</a></li>
+            </ul>
+        </div>
+        <div class="h-10">
+            <div class="flex flex-row pt-2 pl-6">
+                <div>
+                    <a href="#"><img class="h-12 w-12 p-1" src="../../../assets/images/social-networks/facebook.png" /></a>
+                </div>
+                <div>
+                    <a href="#"><img class="h-12 w-12 p-1" src="../../../assets/images/social-networks/instagram.png" /></a>
+                </div>
+                <div>
+                    <a href="#"><img class="h-12 w-12 p-1" src="../../../assets/images/social-networks/x.png" /></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="basis-1/2 pt-4 px-4">
+        <div class="h-3/4">
+            <img src="../../../assets/images/home_image.jpeg" class="w-full" />
+        </div>
+        <div class="h-1/4 pt-2">
+            <h2 class="secondary-color">Friend of the week</h2>
+            <div class="flex items-center space-x-6">
+                <div class="shrink-0">
+                  <img class="h-24 w-24 object-cover rounded-full" src="../../../assets/images/friend_image.png" alt="Current profile photo" />
+                </div>
+                <label class="block">
+                    Cats depend on people for everything they need—food, fresh water, a clean litter box, veterinary care, and, most important, affection and love. Here are some essentials to keep your feline friend happy and safe.
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="basis-1/4 pt-4 px-4">
+        <div class="h-3/4">
+            <h2 class="secondary-color">Popular Pets</h2>
+            <ul class="list-none list-inside">
+                <li class="pl-5">
+                    <h3><a href="#" class="underline hover:underline">Dogs</a></h3>
+                    <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
+                    </ul>
+                </li>
+                <li class="pl-5">
+                    <h3><a href="#" class="underline hover:underline">Cats</a></h3>
+                    <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Rag Doll</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Abyssinian</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="h-1/4 pt-2">
+            <h2 class="secondary-color">Pet Care Recommendations</h2>
+            <ul class="list-disc list-inside">
+                <li class="pl-5"><a href="#" class="underline hover:underline">Happy, healthy pets</a></li>
+                <li class="pl-5"><a href="#" class="underline hover:underline">Pet's natural tendencies</a></li>
+                <li class="pl-5"><a href="#" class="underline hover:underline">Train your pet properly</a></li>
+            </ul>
+        </div>
+    </div>
+  </div>
