--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,44 @@
-<h1>PetShop App</h1>
+<header>
+    <div class="flex flex-row h-full">
+        <div class="basis-1/3 flex items-center justify-left">
+            <div class="flex flex-shrink-0 items-center">
+                <img class="h-28 w-auto" src="../assets/images/logo.png" alt="Amazing Pets">
+            </div>
+        </div>
+        <div class="basis-1/3 flex items-center justify-center title-background">
+            <h1 class="text-7xl main-color pb-8">Amazing Pets</h1>
+        </div>
+        <div class="basis-1/3 pr-2">
+            <div class="h-1/2 w-full flex items-center justify-end">
+                <label class="relative block">
+                    <span class="sr-only">Cart</span>
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 secondary-color">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                          </svg>                                                 
+                    </span>
+                    <label class="placeholder:italic placeholder:text-slate-400 block bg-white w-full rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm cart-shadow">Empty Cart</label>
+                </label>
+            </div>
+            <div class="h-1/2 w-full flex items-center justify-end">
+                <label class="relative block">
+                    <span class="sr-only">Search</span>
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 icon-color">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                        </svg>                          
+                    </span>
+                    <input class="placeholder:italic placeholder:text-slate-400 block bg-white w-full border border-slate-300 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm" placeholder="Search" type="text" name="search"/>
+                </label>
+            </div>
+        </div>
+      </div>
+</header>
+<main>
+    <section class="navbar">
+        <app-navbar></app-navbar>
+    </section>
+    <section class="content">
+        <app-home class="h-full"></app-home>
+    </section>
+</main>
