Add pets component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,5 +40,6 @@
     </section>
     <section class="content">
         <app-home class="h-full"></app-home>
+        <!-- <app-pets class="h-full"></app-pets> -->
     </section>
 </main>
