--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -28,4 +28,16 @@ body {
 
 .h-inherit {
     height: inherit;
+}
+
+a:hover {
+    color: #e17835;
+}
+
+.h-42 {
+    height: 42px;
+}
+
+.font-semibold {
+    font-weight: 900;
 }
