--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,1 +1,22 @@
-<p>contact-us works!</p>
+<div class="text-center p-4 grid">
+    <h1 class="secondary-color">Contact Us</h1>
+    <label><span class="text-bold">Email: </span>contact@amazingpets.com</label>
+    <label><span class="text-bold">Phone: </span>(612) 122-4553</label>
+    <label><span class="text-bold">Address: </span></label>
+    <label>2345 Ashland Ave. Minneaplolis, MN - 55123</label>
+</div>
+
+<div class="text-center p-4 grid">
+    <h1 class="secondary-color">Join our newsletter</h1>
+    <div class="center">
+        <form>
+            <div class="m-2">
+                <label class="m-2">Name</label><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="customerName" />
+            </div>
+            <div class="m-2">
+                <label class="m-2">Email</label><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="customerName" />
+            </div>
+            <button class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x">Submit</button>
+        </form>
+    </div>
+</div>
