--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,12 +60,7 @@
             </ul>
         </div>
         <div class="h-1/4 pt-2">
-            <h2 class="secondary-color">Pet Care Recommendations</h2>
-            <ul class="list-disc list-inside">
-                <li class="pl-5"><a href="#" class="underline hover:underline">Happy, healthy pets</a></li>
-                <li class="pl-5"><a href="#" class="underline hover:underline">Pet's natural tendencies</a></li>
-                <li class="pl-5"><a href="#" class="underline hover:underline">Train your pet properly</a></li>
-            </ul>
+            <app-pet-recommendations></app-pet-recommendations>
         </div>
     </div>
   </div>
