--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,6 @@
         <app-navbar></app-navbar>
     </section>
     <section class="content">
-        <app-home class="h-full"></app-home>
-        <!-- <app-pets class="h-full"></app-pets> -->
+        <router-outlet></router-outlet>
     </section>
 </main>
