--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -1,1 +1,53 @@
-<p>book-appointment works!</p>
+<div class="pt-4">
+    <h1 class="secondary-color text-center">Book an Appointment</h1>
+    <div class="p-4 flex justify-center">
+        <form>
+            <table>
+                <tr>
+                    <td>First Name</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="firstName" /></td>
+                </tr>
+                <tr>
+                    <td>Last Name</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="lastName" /></td>
+                </tr>
+                <tr>
+                    <td>Phone Number</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="phoneNumber" /></td>
+                </tr>
+                <tr>
+                    <td>Address</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="address" /></td>
+                </tr>
+                <tr>
+                    <td>State</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="state" /></td>
+                </tr>
+                <tr>
+                    <td>Zip Code</td>
+                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="zipCode" /></td>
+                </tr>
+                <tr>
+                    <td>Date</td>
+                    <td>
+                        <mat-form-field class="example-full-width">
+                            <mat-label>Choose a date</mat-label>
+                            <input matInput [matDatepickerFilter]="dateFilter" [matDatepicker]="$any(picker)">
+                            <mat-hint>MM/DD/YYYY</mat-hint>
+                            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
+                          </mat-form-field>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Time</td>
+                    <td><ngx-timepicker-field [defaultTime]="'11:11 am'" [min]="'08:00 am'" [max]="'05:30 pm'"></ngx-timepicker-field></td>
+                </tr>
+            </table>
+            <div class="my-2 flex justify-center">
+                <button class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x mr-4">Submit</button>
+                <button class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x">Cancel</button>
+            </div>
+        </form>
+    </div>
+</div>
