--- a/src/app/components/commons/pet-card/pet-card.component.html
+++ b/src/app/components/commons/pet-card/pet-card.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-sm rounded overflow-hidden shadow-lg">
     <img class="w-full" src="../../../../assets/images/card-top.jpg" alt="Sunset in the mountains">
     <div class="px-6 py-4">
-      <div class="font-bold text-xl mb-2"><a href="#" class="hover:underline">The Coldest Sunset</a></div>
+      <div class="font-bold text-xl mb-2"><a (click)="openPetDetailsDialog()" class="hover:underline">The Coldest Sunset</a></div>
       <p class="text-gray-700 text-base">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
       </p>
