--- a/src/app/components/toys-and-accessories/toys-and-accessories.component.html
+++ b/src/app/components/toys-and-accessories/toys-and-accessories.component.html
@@ -1,1 +1,69 @@
-<p>toys-and-accessories works!</p>
+<div class="flex flex-row h-full">
+    <div class="basis-1/6 pt-4 px-4">
+        <h2 class="secondary-color">Dogs</h2>
+        <ul class="list-disc list-inside">
+            <li class="pl-5"><a href="#" class="underline hover:underline">Food</a></li>
+            <li class="pl-5"><a href="#" class="underline hover:underline">Toys</a></li>
+        </ul>
+        <h2 class="secondary-color">Cats</h2>
+        <ul class="list-disc list-inside">
+            <li class="pl-5"><a href="#" class="underline hover:underline">Food</a></li>
+            <li class="pl-5"><a href="#" class="underline hover:underline">Toys</a></li>
+        </ul>
+        <h2 class="secondary-color">Others</h2>
+        <ul class="list-disc list-inside">
+            <li class="pl-5"><a href="#" class="underline hover:underline">Reptiles</a></li>
+            <li class="pl-5"><a href="#" class="underline hover:underline">Fishes</a></li>
+        </ul>
+        <br>
+        <a href="#" class="underline hover:underline">View all items</a>
+    </div>
+    <div class="basis-5/6 pt-4 px-4">
+        <div class="block h-full">
+            <h2 class="secondary-color">Toys And Accessories</h2>
+            <div class="w-full mt-2">
+                <div class="h-full">
+                    <div class="flex ...">
+                        <div class="flex-none w-1/3">
+                            <label class="relative block">
+                                <span class="sr-only">Search</span>
+                                <span class="absolute inset-y-0 left-0 flex items-center pl-2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 icon-color">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                                    </svg>                          
+                                </span>
+                                <input class="placeholder:italic h-42 placeholder:text-blue-950 block bg-white w-full border border-blue-950 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm" placeholder="Search" type="text" name="search"/>
+                            </label>
+                        </div>
+                        <div class="ml-2">
+                            <button class="bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white py-2 px-4 border border-blue-950 hover:border-transparent rounded">
+                                Sort By
+                            </button>
+                        </div>
+                        <div class="ml-2">
+                            <button class="bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white py-2 px-4 border border-blue-950 hover:border-transparent rounded">
+                                Filter By
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-2 pb-2 main-container">
+                <div class="flex flex-row pt-4">
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                </div>
+                <div class="flex flex-row pt-4">
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                    <app-item-card class="w-1/4 px-2"></app-item-card>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
