Organize home page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,29 @@
 <div class="flex flex-row h-full">
-    <div class="basis-1/4 pt-4 px-4">
+    <div class="basis-1/5 pt-4 px-4">
         <div class="h-90">
-            <h2 class="secondary-color">Recommended Products</h2>
-            <ul class="list-disc list-inside">
-                <li class="pl-5"><a href="#" class="underline hover:underline">Benebone Bacon Flavor</a></li>
-                <li class="pl-5"><a href="#" class="underline hover:underline">Nylabone Power Chew Lobster</a></li>
-                <li class="pl-5"><a href="#" class="underline hover:underline">Goody Box Adventure Toys & Treats</a></li>
-                <li class="pl-5"><a href="#" class="underline hover:underline">Frisco 20-in Faux Fur Cat Tree, Gray</a></li>
+            <h2 class="secondary-color">Popular Pets</h2>
+            <ul class="list-none list-inside">
+                <li class="pl-5">
+                    <h3><a href="#" class="underline hover:underline">Dogs</a></h3>
+                    <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
+                    </ul>
+                </li>
+                <li class="pl-5">
+                    <h3><a href="#" class="underline hover:underline">Cats</a></h3>
+                    <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Rag Doll</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Abyssinian</a></li>
+                    </ul>
+                </li>
+                <li class="pl-5">
+                    <h3><a href="#" class="underline hover:underline">Birds</a></h3>
+                    <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Lovebird</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Cockatiel</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="h-10">
@@ -23,9 +40,9 @@
             </div>
         </div>
     </div>
-    <div class="basis-1/2 pt-4 px-4">
+    <div class="basis-3/5 pt-4 px-4">
         <div class="h-3/4">
-            <img src="../../../assets/images/home_image.jpeg" class="w-full" />
+            <img src="../../../assets/images/home_image.jpeg" class="w-full h-full" />
         </div>
         <div class="h-1/4 pt-2">
             <h2 class="secondary-color">Friend of the week</h2>
@@ -39,22 +56,26 @@
             </div>
         </div>
     </div>
-    <div class="basis-1/4 pt-4 px-4">
+    <div class="basis-1/5 pt-4 px-4">
         <div class="h-3/4">
-            <h2 class="secondary-color">Popular Pets</h2>
+            <h2 class="secondary-color">Recommended Products</h2>
             <ul class="list-none list-inside">
                 <li class="pl-5">
-                    <h3><a href="#" class="underline hover:underline">Dogs</a></h3>
+                    <h3><a href="#" class="underline hover:underline">Accessories</a></h3>
                     <ul class="list-disc list-inside">
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
                         <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
                         <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
                     </ul>
                 </li>
                 <li class="pl-5">
-                    <h3><a href="#" class="underline hover:underline">Cats</a></h3>
+                    <h3><a href="#" class="underline hover:underline">Toys</a></h3>
                     <ul class="list-disc list-inside">
                         <li class="pl-5"><a href="#" class="underline hover:underline">Rag Doll</a></li>
                         <li class="pl-5"><a href="#" class="underline hover:underline">Abyssinian</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
+                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
                     </ul>
                 </li>
             </ul>
