--- a/src/app/components/commons/pet-card/pet-card.component.html
+++ b/src/app/components/commons/pet-card/pet-card.component.html
@@ -1,20 +1,18 @@
 <div class="max-w-sm rounded overflow-hidden shadow-lg">
-    <img class="w-full" src="../../../../assets/images/card-top.jpg" alt="Sunset in the mountains">
+    <img class="w-full" src="../../../../assets/images/pets/{{data.image}}" alt="Sunset in the mountains">
     <div class="px-6 py-4">
-      <div class="font-bold text-xl mb-2"><a (click)="openPetDetailsDialog()" class="hover:underline">The Coldest Sunset</a></div>
-      <p class="text-gray-700 text-base">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
-      </p>
+      <div class="font-bold text-xl mb-2"><a (click)="openPetDetailsDialog(data.id)" class="underline">{{data.breed}}</a></div>
+      <p class="text-gray-700 text-base">{{data.shortDescription}}</p>
     </div>
     <div class="px-6 pt-4 pb-2">
-      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Height</span> 9 inches</span>
-      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Weight</span> 30 pounds</span>
-      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Life Expectancy</span> 10 years</span>
-      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Colors</span> Brown / White / Cream</span>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Height</span> {{data.height}} inches</span>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Weight</span> {{data.weight}} pounds</span>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Life Expectancy</span> {{data.lifeExpectancy}} years</span>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Colors</span>{{data.color}}</span>
     </div>
     <div class="flex flex-row px-6 pb-2">
-      <h1 class="pt-1">$200</h1>
-      <button class="bg-blue-950 hover:bg-blue-900 text-white py-2 px-4 rounded mx-3">
+      <h1 class="pt-1">${{data.price}}</h1>
+      <button (click)="onBookAppointment(data.id)" class="bg-blue-950 hover:bg-blue-900 text-white py-2 px-4 rounded mx-3">
         Book An Appointment
       </button>
     </div>
