--- a/src/app/components/commons/pet-recommendations/pet-recommendations.component.html
+++ b/src/app/components/commons/pet-recommendations/pet-recommendations.component.html
@@ -1,6 +1,6 @@
 <h2 class="secondary-color">Pet Care Recommendations</h2>
 <ul class="list-disc list-inside">
-    <li class="pl-5"><a href="#" class="underline hover:underline">Happy, healthy pets</a></li>
-    <li class="pl-5"><a href="#" class="underline hover:underline">Pet's natural tendencies</a></li>
-    <li class="pl-5"><a href="#" class="underline hover:underline">Train your pet properly</a></li>
+    <li class="pl-5"><a href="https://www.happyhealthypets.com/pet-resources/the-best-ways-to-keep-your-pet-healthy" target="_blank" class="underline hover:underline">Happy, healthy pets</a></li>
+    <li class="pl-5"><a href="https://www.happyhealthypets.com/pet-resources/how-to-prevent-pet-toxicity" target="_blank" class="underline hover:underline">How to Prevent Pet Toxicity</a></li>
+    <li class="pl-5"><a href="https://www.happyhealthypets.com/pet-resources/the-importance-of-pet-immunizations" target="_blank" class="underline hover:underline">The Importance of Pet Immunizations</a></li>
 </ul>
