--- a/src/app/components/pets/pets.component.html
+++ b/src/app/components/pets/pets.component.html
@@ -1,13 +1,6 @@
 
 <div class="block h-full p-4">
     <h2 class="secondary-color">Pet For Shopping</h2>
-    <div class="flex flex-row">
-        <a href="#" class="underline hover:underline">Dogs</a>
-        <a href="#" class="underline hover:underline px-2">Cats</a>
-        <a href="#" class="underline hover:underline px-2">Fish</a>
-        <a href="#" class="underline hover:underline px-2">Reptile</a>
-        <a href="#" class="underline hover:underline px-2">Birds</a>
-    </div>
     <div class="w-full mt-2">
         <div class="h-full">
             <div class="flex ...">
@@ -19,34 +12,27 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                             </svg>                          
                         </span>
-                        <input class="placeholder:italic h-42 placeholder:text-blue-950 block bg-white w-full border border-blue-950 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm" placeholder="Search" type="text" name="search"/>
+                        <input (keyup)="searchByText()" [(ngModel)]="textSearch" class="placeholder:italic h-42 placeholder:text-blue-950 block bg-white w-full border border-blue-950 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm" placeholder="Search" type="text" name="search"/>
                     </label>
                 </div>
-                <div class="ml-2">
-                    <button class="bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white py-2 px-4 border border-blue-950 hover:border-transparent rounded">
-                        Sort By
-                    </button>
-                </div>
-                <div class="ml-2">
-                    <button class="bg-transparent hover:bg-blue-950 text-blue-950 hover:text-white py-2 px-4 border border-blue-950 hover:border-transparent rounded">
-                        Filter By
-                    </button>
+                <div class="ml-4 pt-2">
+                    <div class="flex flex-row">
+                        <a (click)="filterBy(filterByDog)" class="underline hover:underline {{currentFilter == filterByDog ? 'active' : ''}}">Dogs</a>
+                        <a (click)="filterBy(filterByCat)" class="underline hover:underline px-2 {{currentFilter == filterByCat ? 'active' : ''}}">Cats</a>
+                        <a (click)="filterBy(filterByFish)" class="underline hover:underline px-2 {{currentFilter == filterByFish ? 'active' : ''}}">Fishes</a>
+                        <a (click)="filterBy(filterByReptile)" class="underline hover:underline px-2 {{currentFilter == filterByReptile ? 'active' : ''}}">Reptiles</a>
+                        <a (click)="filterBy(filterByBird)" class="underline hover:underline px-2 {{currentFilter == filterByBird ? 'active' : ''}}">Birds</a>
+                        <a (click)="filterBy()" class="underline hover:underline px-2">Show All</a>
+                    </div>
                 </div>
               </div>
         </div>
     </div>
     <div class="mt-2 pb-2 main-container">
-        <div class="flex flex-row pt-4">
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-        </div>
-        <div class="flex flex-row pt-4">
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
-            <app-pet-card class="w-1/4 px-2"></app-pet-card>
+        <div class="grid grid-cols-4 gap-4">
+            <div *ngFor="let pet of pets">
+                <app-pet-card [data]="pet"></app-pet-card>
+            </div>
         </div>
     </div>
   </div>
