--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -1,38 +1,42 @@
 <div class="pt-4">
     <h1 class="secondary-color text-center">Book an Appointment</h1>
     <div class="p-4 flex justify-center">
-        <form>
+        <form  #f="ngForm" (ngSubmit)="onFormSubmit(f)">
             <table>
                 <tr>
                     <td>First Name</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="firstName" /></td>
+                    <td><input class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="firstName" [(ngModel)]="firstName"/></td>
                 </tr>
                 <tr>
                     <td>Last Name</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="lastName" /></td>
+                    <td><input class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="lastName" [(ngModel)]="lastName"/></td>
                 </tr>
                 <tr>
                     <td>Phone Number</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="phoneNumber" /></td>
+                    <td><input class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="phoneNumber" [(ngModel)]="phoneNumber"/></td>
                 </tr>
                 <tr>
                     <td>Address</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="address" /></td>
+                    <td><input class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="address" [(ngModel)]="address"/></td>
                 </tr>
                 <tr>
                     <td>State</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="state" /></td>
+                    <td>
+                        <select class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" name="state" [(ngModel)]="state">
+                            <option *ngFor="let stateObj of states" value="{{stateObj.key}}">{{stateObj.state}}</option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <td>Zip Code</td>
-                    <td><input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="zipCode" /></td>
+                    <td><input class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" type="text" name="zipCode" [(ngModel)]="zipCode"/></td>
                 </tr>
                 <tr>
-                    <td>Date</td>
+                    <td>Appointment Date</td>
                     <td>
                         <mat-form-field class="example-full-width">
                             <mat-label>Choose a date</mat-label>
-                            <input matInput [matDatepickerFilter]="dateFilter" [matDatepicker]="$any(picker)">
+                            <input matInput [matDatepickerFilter]="dateFilter" [matDatepicker]="$any(picker)" name="appointmentDate" [(ngModel)]="appointmentDate">
                             <mat-hint>MM/DD/YYYY</mat-hint>
                             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
@@ -40,13 +44,21 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Time</td>
-                    <td><ngx-timepicker-field [defaultTime]="'11:11 am'" [min]="'08:00 am'" [max]="'05:30 pm'"></ngx-timepicker-field></td>
+                    <td>Appointment Time</td>
+                    <td><ngx-timepicker-field [defaultTime]="'11:11 am'" [min]="'08:00 am'" [max]="'05:30 pm'" name="appointmentTime" [(ngModel)]="appointmentTime"></ngx-timepicker-field></td>
+                </tr>
+                <tr>
+                    <td>Pet</td>
+                    <td>
+                        <select class="w-full border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1" name="petId" [(ngModel)]="petId">
+                            <option *ngFor="let petObj of pets" value="{{petObj.id}}">{{petObj.name}}</option>
+                        </select>
+                    </td>
                 </tr>
             </table>
             <div class="my-2 flex justify-center">
-                <button class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x mr-4">Submit</button>
-                <button class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x">Cancel</button>
+                <button type="submit" class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x mr-4">Submit</button>
+                <button (click)="goHome()" class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x">Cancel</button>
             </div>
         </form>
     </div>
