--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -56,8 +56,14 @@
                     </td>
                 </tr>
             </table>
+            <div *ngIf="this.saveComplete">
+                <app-success-alert [message]="'Appointment stored successfully.'"></app-success-alert>
+            </div>
+            <div *ngIf="this.saveUnsuccessful">
+                <app-error-alert [message]="errorMessage"></app-error-alert>
+            </div>
             <div class="my-2 flex justify-center">
-                <button type="submit" class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x mr-4">Submit</button>
+                <button [disabled]="saveUnsuccessful" type="submit" class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x mr-4 {{this.saveUnsuccessful ? 'opacity-50 cursor-not-allowed' : ''}}">Submit</button>
                 <button (click)="goHome()" class="bg-blue-950 hover:bg-blue-900 text-white py-1 px-4 my-1 rounded mx-3x">Cancel</button>
             </div>
         </form>
