--- a/src/app/components/book-appointment/book-appointment.component.css
+++ b/src/app/components/book-appointment/book-appointment.component.css
@@ -1,3 +1,12 @@
 td {
     padding: 5px;
 }
+
+.main-container {
+    height: 520px;
+    overflow-y: scroll;
+}
+
+.main-form {
+    max-width: 450px;
+}
