Implement toys and accessories module

--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -1,4 +1,5 @@
 <div class="p-4">
+    <h1 class="secondary-color text-center">Booked Appointments</h1>
     <div class="flex flex-row mb-2">
         <label class="mr-3 my-1">Phone Number</label>
         <input class="border rounded-md focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 px-1 mr-3" type="number" name="phoneNumber" [(ngModel)]="phoneNumber"/>
