--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -73,21 +73,21 @@
             <h2 class="secondary-color">Recommended Products</h2>
             <ul class="list-none list-inside">
                 <li class="pl-5">
-                    <h3><a href="#" class="underline hover:underline">Accessories</a></h3>
+                    <h3>Accessories</h3>
                     <ul class="list-disc list-inside">
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'Katziela Voyager Backpack'}" class="underline hover:underline">Katziela Voyager Backpack</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'Cat collar'}" href="#" class="underline hover:underline">Cat collar</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'Reptile Turtle Aquarium Tank Turtle Vivarium'}" href="#" class="underline hover:underline">Reptile Turtle Aquarium Tank Turtle Vivarium</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'KONG Ball Cat'}" href="#" class="underline hover:underline">KONG Ball Cat</a></li>
                     </ul>
                 </li>
                 <li class="pl-5">
-                    <h3><a href="#" class="underline hover:underline">Toys</a></h3>
+                    <h3>Toys</h3>
                     <ul class="list-disc list-inside">
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Rag Doll</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Abyssinian</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Chihuahua</a></li>
-                        <li class="pl-5"><a href="#" class="underline hover:underline">Golden Doodle</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'Kong Flyer Rubber Disc Large'}" class="underline hover:underline">Kong Flyer Rubber Disc Large</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'KONG Connects Magnacat'}" class="underline hover:underline">KONG Connects Magnacat</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'Kingsyard Metal Bird Feeders for Outdoor Hanging'}" class="underline hover:underline">Kingsyard Metal Bird Feeders for Outdoor Hanging</a></li>
+                        <li class="pl-5"><a [routerLink]="['/toys-accessories']" [queryParams]="{search: 'KONG AirDog Squeakair Ball Dog Toy'}" class="underline hover:underline">KONG AirDog Squeakair Ball Dog Toy</a></li>
                     </ul>
                 </li>
             </ul>
