--- a/src/app/components/commons/pet-card/pet-card.component.html
+++ b/src/app/components/commons/pet-card/pet-card.component.html
@@ -5,7 +5,7 @@
       <p class="text-gray-700 text-base">{{data.shortDescription}}</p>
     </div>
     <div class="px-6 pt-4 pb-2">
-      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Height</span> {{data.height}} inches</span>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">{{data.isLongMeasure ? 'Long' : 'Height'}}</span> {{data.height}} inches</span>
       <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Weight</span> {{data.weight}} pounds</span>
       <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Life Expectancy</span> {{data.lifeExpectancy}} years</span>
       <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2"><span class="font-bold">Colors</span>{{data.color}}</span>
