--- a/src/app/components/pets/pets.component.html
+++ b/src/app/components/pets/pets.component.html
@@ -1,6 +1,6 @@
 
 <div class="block h-full p-4">
-    <h2 class="secondary-color">Pet For Shopping</h2>
+    <h2 class="secondary-color">Pets For Shopping</h2>
     <div class="w-full mt-2">
         <div class="h-full">
             <div class="flex ...">
