Make responsive header, navbar, and pets

--- a/src/app/components/commons/item-card/item-card.component.html
+++ b/src/app/components/commons/item-card/item-card.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm rounded overflow-hidden shadow-lg">
+<div class="max-w-sm rounded overflow-hidden shadow-lg m-2">
     <img class="w-full" src="../../../../assets/images/merchandise/{{data.image}}" alt="Sunset in the mountains">
     <div class="px-6 py-4">
       <div class="font-bold text-xl mb-2">{{data.name}}</div>
