--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <header>
     <div class="flex flex-row h-full">
-        <div class="basis-1/3 flex items-center justify-left">
+        <div class="basis-1/2 md:basis-1/4 flex items-center justify-center sm:justify-start">
             <div class="flex flex-shrink-0 items-center">
                 <img class="h-28 w-auto" src="../assets/images/logo.png" alt="Amazing Pets">
             </div>
         </div>
-        <div class="basis-1/3 flex items-center justify-center title-background">
-            <h1 class="text-7xl main-color pb-8">Amazing Pets</h1>
+        <div class="w-0 sm:basis-1/2 md:visible md:w-auto flex items-center justify-center title-background invisible">
+            <h1 class="text-7xl main-color pb-8 text-4xl lg:text-6xl">Amazing Pets</h1>
         </div>
-        <div class="basis-1/3 pr-2">
+        <div class="basis-1/2 md:basis-1/4 pr-2">
             <div class="h-1/2 w-full flex items-center justify-end">
                 <label class="relative block">
                     <span class="sr-only">Cart</span>
