--- a/src/app/components/commons/navbar/navbar.component.html
+++ b/src/app/components/commons/navbar/navbar.component.html
@@ -1,18 +1,63 @@
 <nav class="bg-gray-800">
-    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-      <div class="relative flex h-14 items-center justify-between">
-        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-          <div class="hidden sm:block">
-            <div class="flex space-x-4">
-              <a href="#" [routerLink]="['/home']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">{{items.home}}</a>
-              <a href="#" [routerLink]="['/pets']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.pets}}</a>
-              <a href="#" [routerLink]="['/book-appointment']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.bookAppointment}}</a>
-              <a href="#" [routerLink]="['/toys-accessories']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.toysAccessories}}</a>
-              <a href="#" [routerLink]="['/contact-us']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.contactUs}}</a>
-            </div>
+  <div class="mx-auto ">
+    <div class="relative flex h-14 items-center justify-between">
+      <div class="flex flex-1 items-center md:items-stretch md:justify-start">
+        <button type="button" class="mx-2 relative rounded-md p-2 text-gray-400 md:hidden" (click)="showModalMenu()">
+          <span class="absolute -inset-0.5"></span>
+          <span class="sr-only">Open menu</span>
+          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+        </button>
+        <div class="hidden md:block">
+          <div class="flex space-x-4">
+            <a href="#" [routerLink]="['/home']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">{{items.home}}</a>
+            <a href="#" [routerLink]="['/pets']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.pets}}</a>
+            <a href="#" [routerLink]="['/book-appointment']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.bookAppointment}}</a>
+            <a href="#" [routerLink]="['/toys-accessories']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.toysAccessories}}</a>
+            <a href="#" [routerLink]="['/contact-us']" routerLinkActive="active" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">{{items.contactUs}}</a>
           </div>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
+
+<div class="bg-white {{showModal}}">
+  <div class="relative z-40 lg:hidden" role="dialog" aria-modal="true">
+    <div class="fixed inset-0 bg-black bg-opacity-25"></div>
+    <div class="fixed inset-0 z-40 flex">
+      <div class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-white pb-12 shadow-xl">
+        <div class="space-y-6 border-t border-gray-200 px-4 py-6">
+          <div class="flow-root">
+            <div class="flex">
+              <a href="#" (click)="hideModalMenu()" [routerLink]="['/home']" routerLinkActive="active" class="-m-2 basis-3/4 block p-2 font-medium text-gray-900" aria-current="page">{{items.home}}</a>
+              <div class="flex basis-1/4 justify-end">
+                <button type="button" (click)="hideModalMenu()" class="relative -m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400">
+                  <span class="absolute -inset-0.5"></span>
+                  <span class="sr-only">Close menu</span>
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="flow-root">
+            <a href="#" (click)="hideModalMenu()" [routerLink]="['/pets']" routerLinkActive="active" class="-m-2 block p-2 font-medium text-gray-900">{{items.pets}}</a>
+          </div>
+          <div class="flow-root">
+            <a href="#" (click)="hideModalMenu()" [routerLink]="['/book-appointment']" routerLinkActive="active" class="-m-2 block p-2 font-medium text-gray-900">{{items.bookAppointment}}</a>
+          </div>
+          <div class="flow-root">
+            <a href="#" (click)="hideModalMenu()" [routerLink]="['/toys-accessories']" routerLinkActive="active" class="-m-2 block p-2 font-medium text-gray-900">{{items.toysAccessories}}</a>
+          </div>
+          <div class="flow-root">
+            <a href="#" (click)="hideModalMenu()" [routerLink]="['/contact-us']" routerLinkActive="active" class="-m-2 block p-2 font-medium text-gray-900">{{items.contactUs}}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   
