--- a/src/app/components/commons/pet-card/pet-card.component.html
+++ b/src/app/components/commons/pet-card/pet-card.component.html
@@ -1,5 +1,5 @@
-<div class="max-w-sm rounded overflow-hidden shadow-lg">
-    <img src="../../../../assets/images/pets/{{data.image}}" width="340" alt="Sunset in the mountains">
+<div class="max-w-sm rounded overflow-hidden shadow-lg my-2">
+    <img src="../../../../assets/images/pets/{{data.image}}" class="w-full" alt="Sunset in the mountains">
     <div class="px-6 py-4 ">
       <div class="font-bold text-xl mb-2"><a (click)="openPetDetailsDialog(data.id)" class="underline">{{data.breed}}</a></div>
       <p class="text-gray-700 text-base">{{data.shortDescription}}</p>
