--- a/src/app/components/toys-and-accessories/toys-and-accessories.component.html
+++ b/src/app/components/toys-and-accessories/toys-and-accessories.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-row h-full">
-    <div class="w-1/6 pt-4 px-4">
+<div class="flex h-full">
+    <div class="flex-none w-0 invisible sm:w-36 sm:visible sm:p-2">
         <h2 class="secondary-color">Dogs</h2>
         <ul class="list-disc list-inside">
             <li class="pl-5"><a (click)="filterBy(filterByDog, filterByToy)" class="underline hover:underline">Toys</a></li>
@@ -19,13 +19,13 @@
         <br>
         <a (click)="filterBy()" class="underline hover:underline">View all items</a>
     </div>
-    <div class="pt-4 px-4">
+    <div class="pt-4 px-4 flex-1">
         <div class="block h-full">
             <h2 class="secondary-color">Toys And Accessories</h2>
             <div class="w-full mt-2">
                 <div class="h-full">
-                    <div class="flex ...">
-                        <div class="flex-none w-1/3">
+                    <div class="flex flex-row">
+                        <div class="flex-1 sm:flex-1/2">
                             <label class="relative block">
                                 <span class="sr-only">Search</span>
                                 <span class="absolute inset-y-0 left-0 flex items-center pl-2">
@@ -36,11 +36,14 @@
                                 <input (keyup)="searchByText()" [(ngModel)]="textSearch" class="placeholder:italic h-42 placeholder:text-blue-950 block bg-white w-full border border-blue-950 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm" placeholder="Search" type="text" name="search"/>
                             </label>
                         </div>
+                        <div class="flex-1/3 mx-2 sm:mx-0 sm:w-0 sm:invisible">
+                            <button>Filter</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="mt-2 pb-2 main-container">
-                <div class="grid grid-cols-5 gap-5">
+                <div class="grid grid-cols gap sm:grid-cols-2 sm:gap-2 md:grid-cols-3 md:gap-3 xl:grid-cols-4 xl:gap-4">
                     <div *ngFor="let merchandiseItem of merchandiseItemList">
                         <app-item-card [data]="merchandiseItem"></app-item-card>
                     </div>
